<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Launcher</string>
    <string name="title_activity_warning">Warning</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="warning">警告</string>
    <string name="warning_1">1、驾驶时请不要观看视频，以免发生危险。</string>
    <string name="warning_2">2、为了您的安全，请遵守交通规则并仔细阅读说明书。</string>
    <string name="warning_3">3、违反上述忠告而发生交通事故或遭受其他损失，本产品的开发、生产、</string>
    <string name="warning_4">销售均不承担任何责任。</string>
    <string name="ok">同意</string>
    <string name="time">00:00</string>
    <string name="date">2017.5.26</string>
    <string name="week">星期三</string>
    <string name="txt_radio">收音机</string>
    <string name="txt_media">多媒体</string>
    <string name="txt_btphone">蓝牙电话</string>
    <string name="txt_navigate">导航</string>
    <string name="txt_setting">设置</string>
    <string name="txt_phone_connection">手机互联</string>
    <string name="txt_online_entertainment">在线娱乐</string>
    <string name="txt_driving_record">行车记录</string>
    <string name="txt_calendar">日历</string>
    <string name="txt_voice">语音识别</string>
    <string name="Sunday">星期日</string>
    <string name="Monday">星期一</string>
    <string name="Tuesday">星期二</string>
    <string name="Wednesday">星期三</string>
    <string name="Thursday">星期四</string>
    <string name="Friday">星期五</string>
    <string name="Saturday">星期六</string>

</resources>
