<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_warning"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="34dp"
        android:drawableLeft="@drawable/img_warning"
        android:drawablePadding="15dp"
        android:gravity="center"
        android:text="@string/warning"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txt_warning_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="30dp"
        android:text="@string/warning_1"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txt_warning_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="10dp"
        android:text="@string/warning_2"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txt_warning_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="10dp"
        android:text="@string/warning_3"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txt_warning_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="10dp"
        android:text="@string/warning_4"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:background="@drawable/btn_warning_selector"
        android:enabled="false"
        android:text="@string/ok"
        android:textColor="@color/textcolor_selector"
        android:textSize="28sp" />

</LinearLayout>