<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/img_main_top_background"
        android:gravity="center_vertical"
        android:paddingRight="100dp" >

        <TextView
            android:id="@+id/txt_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/time"
            android:textColor="@color/white"
            android:textSize="72sp" />

        <TextView
            android:id="@+id/txt_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/txt_time"
            android:layout_alignLeft="@+id/txt_date"
            android:paddingBottom="20dp"
            android:text="@string/week"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txt_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/txt_time"
            android:paddingTop="20dp"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/grid_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />

    <!--<GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:columnCount="5"
        android:rowCount="2" >

        <RelativeLayout
            android:id="@+id/radio"
            style="@style/AppLayout" >

            <TextView
                android:id="@+id/btn_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/img_radio"
                android:gravity="bottom|center_horizontal"
                android:text="@string/txt_radio"
                android:textColor="@color/white"
                android:textSize="@dimen/apps_name_size" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/media"
            style="@style/AppLayout" >

            <TextView
                android:id="@+id/btn_media"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/img_media"
                android:gravity="bottom|center_horizontal"
                android:text="@string/txt_media"
                android:textColor="@color/white"
                android:textSize="@dimen/apps_name_size" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btphone"
            style="@style/AppLayout" >

            <TextView
                android:id="@+id/btn_btphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/img_btphone"
                android:gravity="bottom|center_horizontal"
                android:text="@string/txt_btphone"
                android:textColor="@color/white"
                android:textSize="@dimen/apps_name_size" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/navigate"
            style="@style/AppLayout" >

            <TextView
                android:id="@+id/btn_navigate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/img_navigate"
                android:gravity="bottom|center_horizontal"
                android:text="@string/txt_navigate"
                android:textColor="@color/white"
                android:textSize="@dimen/apps_name_size" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/setting"
            style="@style/AppLayout" >

            <TextView
                android:id="@+id/btn_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/img_setting"
                android:gravity="bottom|center_horizontal"
                android:text="@string/txt_setting"
                android:textColor="@color/white"
                android:textSize="@dimen/apps_name_size" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/phone_connection"
            style="@style/AppLayout" >

            <TextView
                android:id="@+id/btn_phone_connection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/img_phone_connection"
                android:gravity="bottom|center_horizontal"
                android:text="@string/txt_phone_connection"
                android:textColor="@color/white"
                android:textSize="@dimen/apps_name_size" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/online_entertainment"
            style="@style/AppLayout" >

            <TextView
                android:id="@+id/btn_online_entertainment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:background="@drawable/img_online_entertainment"
                android:gravity="bottom|center_horizontal"
                android:text="@string/txt_online_entertainment"
                android:textColor="@color/white"
                android:textSize="@dimen/apps_name_size" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/driving_record"
            style="@style/AppLayout" >

            <TextView
                android:id="@+id/btn_driving_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:background="@drawable/img_driving_record"
                android:gravity="bottom|center_horizontal"
                android:text="@string/txt_driving_record"
                android:textColor="@color/white"
                android:textSize="@dimen/apps_name_size" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/calendar"
            style="@style/AppLayout" >

            <TextView
                android:id="@+id/btn_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/img_calendar"
                android:gravity="bottom|center_horizontal"
                android:text="@string/txt_calendar"
                android:textColor="@color/white"
                android:textSize="@dimen/apps_name_size" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/voice"
            style="@style/AppLayout" >

            <TextView
                android:id="@+id/btn_voice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/img_voice"
                android:gravity="bottom|center_horizontal"
                android:text="@string/txt_voice"
                android:textColor="@color/white"
                android:textSize="@dimen/apps_name_size" />
        </RelativeLayout>
    </GridLayout>-->

</LinearLayout>